# laika

./: Dockerfile  Makefile  README.md  pyproject.toml
deploy/public/: Dockerfile
laika/: main.py
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: add_initial_hackerspace_config_table.py
src/laika/: config.py  db.py  main.py  services.py
src/tests/: conftest.py
src/tests/laika/: test_main.py  test_services.py
